# stay-ahead

./: .gitignore  Cargo.toml  README.md  astro.config.mjs  drizzle.config.ts  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
drizzle/migrations/: 0000_absent_phantom_reporter.sql  0000_true_phil_sheldon.sql
drizzle/migrations/meta/: 0000_snapshot.json  _journal.json
src/: main.rs
src/components/: CurrentScenario.astro  Phase.astro  PhaseEdit.astro  ProgressBar.astro  ScenariosList.astro  Sidebar.astro  Timer.astro
src/data/: data.ts  db.ts  schema.ts  types.ts
src/layouts/: Layout.astro
src/pages/: index.astro  scenarios.astro
src/pages/api/: scenarios.astro
src/pages/api/phases/: [id].astro  add.astro
src/pages/api/phases/[id]/: edit.astro
src/pages/api/scenarios/: [id].astro  list.astro  new.astro
src/pages/api/scenarios/[id]/: edit.astro
src/pages/scenarios/[id]/: edit.astro
templates/: index.html  main.html  scenarios-list.html  sidebar.html
