[package]
name = "stay-ahead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tower-livereload = "0.8.2"
